--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -126,7 +126,7 @@
     }
   
     .nav-menu.active {
-      background: #1f5156;
+      background: #154c79;
       left: 0px;
       opacity: 1;
       transition: all 0.5s ease;
