--- a/src/Components/countdown.css
+++ b/src/Components/countdown.css
@@ -3,6 +3,9 @@
 .countdown-container {
     text-align: center;
     margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto ;
+    margin-bottom: 50px;
   }
   
   .countdown-heading {
